# middleware/verifyJWT.js
@@ -2,8 +2,24 @@ const jwt = require("jsonwebtoken");
 
 const verifyJWT = (req, res, next) => {
 
-  const authHeader = req.headers.authorization;
-  
+  /* 
+  #swagger.tags = ['Token']
+  #swagger.description = 'Validate token'
+  #swagger.summary = 'Validate token'
+  #swagger.parameters['token'] = {
+      in: 'header',
+      description: 'JWT token',
+      required: true,
+    }
+    #swagger.responses[200] = {
+        description: 'Token is valid',
+    }
+    #swagger.responses[408] = {
+        description: 'Token not provided or invalid',
+    }
+  */
+
+  const authHeader = req.headers['token'];
   console.log('Auth Header:', authHeader); // Registro adicional
   if (!authHeader) {
     return res.status(408).send('Token not provided');
