# swagger_output.json
@@ -8,7 +8,7 @@
   "host": "restapi-o8ud.onrender.com",
   "basePath": "/api",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/items": {
@@ -20,8 +20,10 @@
         "description": "Create an item",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
+            "description": "JWT token",
+            "required": true,
             "type": "string"
           },
           {
@@ -36,6 +38,9 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Token is valid"
+          },
           "201": {
             "description": "Item successfully created"
           },
@@ -43,7 +48,7 @@
             "description": "Bad request"
           },
           "408": {
-            "description": "Request Timeout"
+            "description": "Token not provided or invalid"
           }
         }
       },
@@ -55,8 +60,10 @@
         "description": "Get all items entries",
         "parameters": [
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
+            "description": "JWT token",
+            "required": true,
             "type": "string"
           }
         ],
@@ -68,7 +75,7 @@
             "description": "Bad request"
           },
           "408": {
-            "description": "Request Timeout"
+            "description": "Token not provided or invalid"
           }
         }
       }
@@ -89,8 +96,10 @@
             "description": "Item id"
           },
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
+            "description": "JWT token",
+            "required": true,
             "type": "string"
           }
         ],
@@ -105,7 +114,7 @@
             "description": "Item not found"
           },
           "408": {
-            "description": "Request Timeout"
+            "description": "Token not provided or invalid"
           }
         }
       },
@@ -124,8 +133,10 @@
             "description": ""
           },
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
+            "description": "JWT token",
+            "required": true,
             "type": "string"
           },
           {
@@ -147,7 +158,7 @@
             "description": "Bad Request"
           },
           "408": {
-            "description": "Request Timeout"
+            "description": "Token not provided or invalid"
           }
         }
       },
@@ -166,8 +177,10 @@
             "description": ""
           },
           {
-            "name": "authorization",
+            "name": "token",
             "in": "header",
+            "description": "JWT token",
+            "required": true,
             "type": "string"
           }
         ],
@@ -179,7 +192,7 @@
             "description": "Bad Request"
           },
           "408": {
-            "description": "Request Timeout"
+            "description": "Token not provided or invalid"
           }
         }
       }
